--- a/css/task03.css
+++ b/css/task03.css
@@ -1,4 +1,8 @@
-.clearfix:after {content:"."; display:block; height:0; visibility:hidden; clear:both; }
+.clearfix:after {height:0;line-height:0;visibility:hidden;clear:both;}
+.clearfix:before, .clearfix:after {
+  content: " ";
+  display: table;
+}
 .clearfix { *zoom:1; }
 
 #container {
